# python-project-lvl1

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: Brain_Games_CI.yml
brain_games/: __init__.py  cli.py  game_template.py  welcome_func.py
brain_games/games/: __init__.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
