[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "The set of five simple numerical puzzle games."
classifiers = ["Topic :: Games/Entertainment :: Puzzle Games"]
repository = "https://github.com/ValentynPozhydaiev/python-project-lvl1"
authors = ["Valentyn Pozhydaiev <overclocker98@gmail.com>"]
packages = [
{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"